# defi-flow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.api  README.md  state.json  vercel.json
.claude/commands/: backtest.md  defi-flow.md
.github/workflows/: deploy.yml
docs/: VALUER.md
experiment/: Caddyfile  docker-compose.yml  query-mongo.mjs  setup-vps.sh
experiment/hedgefund-agent/: .env.example  .gitignore  AGENTS.md  Dockerfile  HEARTBEAT.md  MEMORY.md  SOUL.md  TOOLS.md  entrypoint.sh  openclaw.json  vaults.json
experiment/hedgefund-agent/scripts/: ship-logs.mjs  ship-stats.mjs
experiment/hedgefund-agent/skills/strategy-stats/: SKILL.md
experiment/hedgefund-agent/skills/vault-manager/: SKILL.md
experiment/hedgefund-agent/skills/vault-monitor/: SKILL.md
experiment/quant-agent/: .env.example  .gitignore  AGENTS.md  Dockerfile  HEARTBEAT.md  MEMORY.md  SOUL.md  TOOLS.md  entrypoint.sh  openclaw.json
experiment/quant-agent/scripts/: ship-stats.mjs
experiment/quant-agent/skills/backtest/: SKILL.md
experiment/quant-agent/skills/defi-flow/: SKILL.md
experiment/quant-agent/skills/quant-scan/: SKILL.md
experiment/quant-agent/skills/scan-yields/: SKILL.md
experiment/quant-agent/skills/strategy-daemon/: SKILL.md
experiment/quant-agent/skills/strategy-stats/: SKILL.md
experiment/scripts/: Dockerfile  baseline-tracker.mjs
experiment/vault-strategies/: Dockerfile  delta_neutral_basic.json  lending.json  pt_yield.json
ferrofluid/: .rustfmt.toml  Cargo.toml  LICENSE  README.md
ferrofluid/src/: constants.rs  errors.rs  lib.rs
ferrofluid/src/providers/: agent.rs  batcher.rs  exchange.rs  info.rs  mod.rs  nonce.rs  order_tracker.rs  websocket.rs
ferrofluid/src/signers/: mod.rs  privy.rs  signer.rs
ferrofluid/src/types/: actions.rs  eip712.rs  info_types.rs  mod.rs  requests.rs  responses.rs  symbol.rs  symbols.rs  ws.rs
ferrofluid/src/utils/: mod.rs
ferrofluid/tests/: approve_agent_test.rs  managed_exchange_test.rs  order_tracking_test.rs
scripts/: plot_allocations.py  plot_backtest.py
src/: cli.rs  example.rs  lib.rs  list_nodes.rs  logs.rs  main.rs  ps.rs  query.rs  resume.rs  schema.rs  stop.rs  visualize.rs  wasm.rs
src/api/: auth.rs  db.rs  error.rs  events.rs  history.rs  middleware.rs  mod.rs  rate_limit.rs  state.rs  types.rs
src/api/handlers/: ai.rs  backtest.rs  config.rs  data.rs  events.rs  mod.rs  run.rs  schema.rs  strategies.rs  users.rs  validate.rs  wallets.rs
src/backtest/: metrics.rs  mod.rs  monte_carlo.rs  result.rs
src/data/: csv_types.rs  mod.rs
src/engine/: clock.rs  mod.rs  optimizer.rs  reserve.rs  state.rs  topo.rs  venue.rs
src/fetch_data/: manifest.rs  mod.rs  plan.rs  types.rs
src/fetch_data/providers/: defillama.rs  hyperliquid.rs  mod.rs
src/fetch_data/source/: aerodrome.rs  defillama.rs  hyperliquid.rs  mod.rs  rysk.rs
src/model/: amount.rs  chain.rs  edge.rs  mod.rs  node.rs  reserve.rs  valuer.rs  workflow.rs
src/run/: config.rs  hl_activation.rs  mod.rs  registry.rs  scheduler.rs  state.rs  valuer.rs
src/run/executor/: aerodrome.rs  evm.rs  hyperliquid.rs  lending.rs  lifi.rs  mod.rs  pendle.rs  rysk.rs  stub.rs
src/sim/: bridge.rs  lending.rs  lp.rs  mod.rs  options.rs  pendle.rs  perp.rs  spot.rs  swap.rs  wallet.rs
src/validate/: contracts.rs  graph.rs  mod.rs  onchain.rs  references.rs  reserve.rs  tokens.rs
src/venues/: evm.rs  mod.rs
src/venues/lending/: aave.rs  data.rs  fetch.rs  mod.rs  simulator.rs
src/venues/lp/: aerodrome.rs  data.rs  fetch.rs  mod.rs  simulator.rs
src/venues/movement/: bridge2.rs  hyperliquid_native.rs  lifi.rs  mod.rs  simulator.rs
src/venues/options/: data.rs  fetch.rs  mod.rs  rysk.rs  simulator.rs
src/venues/perps/: data.rs  fetch.rs  hyperliquid.rs  mod.rs  simulator.rs
src/venues/primitives/: mod.rs  wallet.rs
src/venues/vault/: data.rs  fetch.rs  mod.rs  morpho.rs  simulator.rs
src/venues/yield_tokens/: data.rs  fetch.rs  mod.rs  pendle.rs  simulator.rs
strategies/: delta_neutral.json  delta_neutral_v2.json
strategies/hackathon/: pt_yield.json
tests/: anvil_common.rs  test_hl_activation.rs  test_lending.rs  test_lp.rs  test_pendle_pt.rs  test_perf_and_valuer.rs  test_reserve.rs  test_vault.rs
ui/: .gitignore  Dockerfile  README.md  auth.ts  build-wasm.sh  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/defillama/: route.ts
ui/app/api/etherscan/: route.ts
ui/app/api/search/: route.ts
ui/components/ai-agent/: agent-panel.tsx
ui/components/auth/: auth-provider.tsx  login-dialog.tsx  mnemonic-display.tsx  settings-dialog.tsx  strategy-picker.tsx  user-menu.tsx  wallet-manager.tsx  wallet-select.tsx
ui/components/workflow/: backtest-panel.tsx  event-log.tsx  node-config-panel.tsx  run-controls.tsx  status-dashboard.tsx  workflow-canvas.tsx  workflow-toolbar.tsx
ui/components/workflow/config/: node-configs.tsx  shared.tsx
ui/data/: defi-flow.db-shm
ui/lib/: api.ts  auth-api.ts  auth-store.ts  node-registry.ts  wasm.ts  workflow-store.ts
ui/lib/ai-agent/: client.ts  prompts.ts  store.ts
ui/lib/converters/: canvas-defi-flow.ts
ui/lib/server/: crypto.ts  db.ts
ui/lib/types/: canvas.ts  defi-flow.ts
ui/public/: defi_flow.d.ts  defi_flow.js  defi_flow_bg.wasm
ui/public/examples/: delta_neutral.json  delta_neutral_v2.json
(+9 files in other folders)
