[package]
name = "defi-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
petgraph = "0.7"
thiserror = "2"
anyhow = "1"
csv = "1"
rand = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
indicatif = "0.17"
ferrofluid = { path = "../cadence-mechanism/ferrofluid" }
alloy = { version = "1.0.16", features = [
    "signers", "signer-local",
    "providers", "provider-http",
    "contract", "sol-types",
    "rpc-types-eth", "network",
    "consensus",
] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
async-trait = "0.1"
notify = "7"
