[package]
name = "defi-flow"
version = "0.1.0"
edition = "2024"

[features]
default = ["full"]
full = [
    "dep:tokio", "dep:reqwest", "dep:alloy", "dep:rustls",
    "dep:notify", "dep:rayon", "dep:indicatif", "dep:ferrofluid",
    "dep:clap", "dep:async-trait", "dep:ctrlc",
    "dep:rand", "dep:chrono", "dep:csv",
    "dep:axum", "dep:tower-http", "dep:uuid", "dep:tokio-stream", "dep:async-stream",
    "dep:rusqlite", "dep:bcrypt", "dep:jsonwebtoken",
    "dep:aes-gcm", "dep:pbkdf2", "dep:sha2", "dep:hmac",
]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
petgraph = "0.7"
thiserror = "2"
anyhow = "1"
csv = { version = "1", optional = true }
rand = { version = "0.9", optional = true }
chrono = { version = "0.4", optional = true }

# Heavy deps - optional, included via "full" feature
clap = { version = "4", features = ["derive"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
indicatif = { version = "0.17", optional = true }
ferrofluid = { path = "ferrofluid", optional = true }
alloy = { version = "1.0.16", features = [
    "signers", "signer-local",
    "providers", "provider-http",
    "contract", "sol-types",
    "rpc-types-eth", "network",
    "consensus",
], optional = true }
rustls = { version = "0.23", features = ["aws_lc_rs"], optional = true }
async-trait = { version = "0.1", optional = true }
notify = { version = "7", optional = true }
rayon = { version = "1.11.0", optional = true }
axum = { version = "0.8", optional = true, features = ["multipart"] }
tower-http = { version = "0.6", optional = true, features = ["cors"] }
uuid = { version = "1", optional = true, features = ["v4"] }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }

# Auth + database
rusqlite = { version = "0.33", features = ["bundled"], optional = true }
bcrypt = { version = "0.16", optional = true }
jsonwebtoken = { version = "9", optional = true }
aes-gcm = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }

# Process management (registry, ps, stop)
libc = "0.2"
dirs = "6"
ctrlc = { version = "3", optional = true }

# WASM deps - optional, included via "wasm" feature
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
alloy = { version = "1.0.16", features = ["node-bindings"] }
hex = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
