[package]
name = "ferrofluid"
description = "A Rust library for interacting with the Hyperliquid Protocol"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Copy Paste"]
license = "MIT"
repository = "https://github.com/ControlCplusControlV/ferrofluid"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy = { version = "1.0.16", features = ["full"] }

# HTTP client stack
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http2"] }
hyper-rustls = "0.27"  # TLS support
http-body-util = "0.1"
tower = { version = "0.4", features = ["timeout", "limit", "retry"] }
http = "1"

# WebSocket
fastwebsockets = { version = "0.6", features = ["upgrade", "simd"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-native-certs = "0.7"
tokio-rustls = "0.26"

# JSON parsing
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
bytes = "1.6"
dashmap = "6"
parking_lot = "0.12"
url = "2.5"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
rmp-serde = "1.1"
base64 = "0.22"
rust_decimal = { version = "1.36", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive", "env"] }

